hphp/test/zend/good/Zend/tests/use_function/includes/foo_strlen.php
<?hh

namespace foo;

function strlen($str) {
    return 4;
}
