hphp/test/zend/bad/ns_077_2.php
<?php
namespace foo;

function foo($a = array(\unknown => unknown))
{
}

foo();